[package]
name = "merkle_notes"
version = "0.1.0"
authors = ["Dusty Phillips <dusty@beanstalk.network>"]
edition = "2018"

[features]
rocker = ["rocksdb", "config"]

[dependencies]
byteorder = "1.3.1"
shrinkwraprs = "0.3.0"
rocksdb = {version = "0.13.0", optional = true}
config = {version = "0.10.1", optional = true}
bincode = "1.2.1"

[dev-dependencies]
assert_matches = "1.3.0"
color-backtrace = "0.1"
