[package]
name = "merkle_notes"
version = "0.1.0"
authors = ["Dusty Phillips <dusty@beanstalk.network>"]
edition = "2018"

[features]
rocker = ["rocksdb"]
sledder = ["sled"]

[dependencies]
byteorder = "1.3.1"
shrinkwraprs = "0.3.0"
rocksdb = {version = "0.13.0", optional = true}
bincode = "1.2.1"
tempfile = "3.1.0"
sled = {version = "0.30.3", optional = true}

[dev-dependencies]
assert_matches = "1.3.0"
color-backtrace = "0.1"
